Add PostgreSQL to SQLite fallback system
- Primary: PostgreSQL (production)
- Fallback: SQLite when PostgreSQL fails
- Auto-recovery: Attempts to reconnect to PostgreSQL
- Health endpoint shows active database
- Migrations work with both databases

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,10 @@ htmlcov/
 # Database
 *.db
 *.sqlite3
+teamup_backup.db
+*.db-journal
+*.db-wal
+*.db-shm
 
 # Logs
 *.log
@@ -85,4 +89,4 @@ SEED_INSTRUCTIONS.md
 
 # Shell scripts (if not needed)
 run-*.sh
-start-*.sh
+start-*.shfrontend/.vite/
